--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -1274,8 +1274,8 @@ margin-top:20px;
     -moz-border-radius-bottomleft: 0px;
     -moz-border-radius-topright: 0px;
     }
-	
-	/*************************Events*******************************************/
+
+/*************************Events*******************************************/
 .page-node- .region-content{
 float:left;
 width:980px;
@@ -1308,4 +1308,54 @@ padding:10px;
 	font-style: normal;
 }
 
+/*------*****---------*/
+#event_drop {
+   border-bottom:2px solid #999;
+   position:relative;
+   top:-17px;
+   padding:0 0 0 220px;
+}
+.page-photographer .select_event_title {
+   position:relative;
+   top:26px;
+   left:10px;
+}
+.page-photographer #edit-box {
+   position:relative;
+   top:-30px;
 
+}
+.page-photographer .upload-progress {
+   position:relative;
+   top:237px;
+    color: #94BB1F;
+    font-family: 'Walkway Bold',sans-serif;
+    font-size: 36px;
+    width: 300px;
+}
+.page-photographer #edit-file {
+   position:relative;
+   top:-26px;
+}
+.page-photographer #edit-upload {
+   position:relative;
+   top:-215px;
+   left:165px;
+   background:url(../images/start-upload.png) no-repeat;
+   width:151px;
+   height:39px;
+   text-indent:999;
+   border:none;
+   float:right;
+   border:0 none;
+   cursor:pointer;
+   outline:none;
+}
+.page-photographer .description 
+{
+	color: #898989;
+    float: right;
+    position: relative;
+    top: -173px;
+	left:12px;
+}
