--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -948,11 +948,18 @@ ul.links li, ul.inline li {
 }
 ul.main-menu li a:hover{
   color:#FF6600!important;
-  background:none!important;
+  background:#e0e0e0!important;
   font-size:15px;
   text-align:center; 
+  padding:4px 12px;
+  border-radius:15px;
+  -moz-border-radius:15px;
+  -webkit-border-radius:15px;
 }
-
+ul.main-menu li a, ul.main-menu li a:link, ul.main-menu li a:visited {
+  padding:4px 12px!important;
+  margin-top:6px;
+}
 #sidebar-first.sidebar {
   float:left;
   z-index:-1;
@@ -1031,17 +1038,34 @@ ul.nice-menu, ul.nice-menu ul
 }
 .content ul.sf-menu li ul
 {
-    background:#ccc;
+    background:#ccc url(../images/menu-arrow.png) no-repeat center -5px;
+	border-radius:6px;
+	-moz-border-radius:6px;
+    -webkit-border-radius:6px;
+	width:170px!important;
+   margin:0px!important;
+   padding:0px!important;
+   position:absolute;
+   top:50px;
 }
 .content ul.sf-menu li ul li 
 {
-  margin-left:-20px;
-padding:2px;
+  margin:0px!important;
+  padding:0px!important;
+  padding:2px;
+  border-bottom:1px solid #e0e0e0;
+  background-color:none!important;
+}
+
+.content ul.sf-menu li ul li a:hover{
+border-radius:0px;
+   	-moz-border-radius:0px;
+    -webkit-border-radius:0px;
+	background:none!important;
 }
 .content ul.sf-menu li ul li ul li
 {
 	margin-top:-6px;
-padding-left:10px;
 }
 /*.content ul.sf-menu li ul li.content ul.sf-menu li ul li:hover
 {
@@ -1310,52 +1334,104 @@ padding:10px;
 
 /*------*****---------*/
 #event_drop {
-   border-bottom:2px solid #999;
-   position:relative;
-   top:-17px;
-   padding:0 0 0 220px;
+   border-bottom:1px solid #999;
+   padding:0 0 0 0;
+   float:left;
+   width:732px;
+   height:63px;
 }
 .page-photographer .select_event_title {
-   position:relative;
-   top:26px;
-   left:10px;
+   float:left;
+   padding:23px 0 0 10px;
+   width:238px!important;
+   height:40px;
+   border-bottom:1px solid #999;
 }
 .page-photographer #edit-box {
+   /*position:relative;
+   top:-30px;*/
+   float:left;
    position:relative;
-   top:-30px;
-
 }
 .page-photographer .upload-progress {
    position:relative;
    top:237px;
-    color: #94BB1F;
-    font-family: 'Walkway Bold',sans-serif;
-    font-size: 36px;
-    width: 300px;
+   color: #94BB1F;
+   font-family: 'Walkway Bold',sans-serif;
+   font-size: 36px;
+   width: 100%;
+   border-top:1px solid #999;
+   float:left;
+   display:none;
 }
 .page-photographer #edit-file {
    position:relative;
    top:-26px;
+   
 }
 .page-photographer #edit-upload {
-   position:relative;
-   top:-215px;
-   left:165px;
    background:url(../images/start-upload.png) no-repeat;
    width:151px;
    height:39px;
    text-indent:999;
    border:none;
-   float:right;
+   float:left;
    border:0 none;
    cursor:pointer;
    outline:none;
+   position:relative;
+   top:-7px;
+   left:791px;
 }
 .page-photographer .description 
 {
 	color: #898989;
     float: right;
-    position: relative;
-    top: -173px;
-	left:12px;
+    position: absolute;
+    top: 426px;
+	right:25px;
+}
+.page-photographer .file_list {
+   padding:8px 0 8px 7px;
+   font-weight:bold;
+}
+.page-photographer .ind_prog {
+  display:none;
+  border:1px solid #ccc;
+  height:10px;
+  width:96%; 
+  background:#CCC;
+  border-radius:6px;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+}
+.page-photographer .fieldset-wrapper {
+   float:left;
+}
+.page-photographer .content {
+	width:100%;
+	margin-top:20px;
+	border-radius:0px !important;
+	-webkit-border-radius:0px!important;
+	-moz-border-radius:0px!important;
+	-o-border-radius:0px!important;
+	box-shadow:none!important;
+	-webkit-box-shadow:none!important;
+	-moz-box-shadow:none!important;
+	-o-box-shadow:none!important;
+	padding-bottom:1px;
+	margin-bottom:20px;
+    min-height:500px;
+}
+#tabs-wrapper {
+  position:relative;
+  margin-bottom:0px!important;
+  top:32px;
+}
+
+div.error, table tr.error {
+
+ background-color:#fce39c!important;
+ 
+ 
 }
