--- a/sites/all/themes/runmemo/css/style.css
+++ b/sites/all/themes/runmemo/css/style.css
@@ -147,7 +147,7 @@ it
 	background:url(../images/twitter-login-hover.png) no-repeat;
 }
 .mt3 {
-	margin-top:3px;
+	margin-top:2px!important;
 	margin-left:10px;
 }
 .slider {
@@ -215,7 +215,7 @@ float:left;
 .slider-cont p {
 	font-family:'Futura LT Light', sans-serif;
 	font-size:18px;
-	margin:0;.cart 
+	margin:0;
 	padding:0;
 	font-weight:normal;
 }
@@ -898,7 +898,7 @@ height:500px;
 .views-slideshow-cycle-main-frame{
 top:6px;
 left:12px;
-
+z-index: 0;
 }
 .views-slideshow-cycle-main-frame .img
 {
@@ -929,8 +929,6 @@ padding:8px!important;
 
 
 #branding img{
-width:259px!important; 
-height:48px!important; 
 padding-top:25px!important; 
 margin-left:-8px;
 }
@@ -949,13 +947,13 @@ ul.links li, ul.inline li {
 }
 ul.main-menu li a:hover{
   color:#FF6600!important;
-  background:#e0e0e0!important;
+  /*background:#e0e0e0!important;*/
   font-size:15px;
   text-align:center; 
   padding:4px 12px;
-  border-radius:15px;
+/*  border-radius:15px;
   -moz-border-radius:15px;
-  -webkit-border-radius:15px;
+  -webkit-border-radius:15px;*/
 }
 ul.main-menu li a, ul.main-menu li a:link, ul.main-menu li a:visited {
   padding:4px 12px!important;
@@ -1043,7 +1041,7 @@ ul.nice-menu, ul.nice-menu ul
 	-moz-border-radius:6px;
     -webkit-border-radius:6px;
 	width:162px!important;
-   margin:15px 0 0 0!important;
+   margin:7px 0 0 0!important;
    padding:0px!important;
    border:1px solid #c4c4c4;
 }
@@ -1067,10 +1065,11 @@ border-radius:0px;
    height:8px;
    position:relative;
    /*newly edited*/
-   top:-5px;
-   left:6px;
+   top:-1px;
+   left:15px;
    display: block;
-  
+   position:relative;
+   z-index:999;
 }
 .content ul.sf-menu li:hover li#menu-450-1 div#main-arrow {
 	display: none;
@@ -1338,8 +1337,8 @@ padding:10px;
 
 @font-face {
 	font-family:'Futura LT Light';
-	src: url('../Futura LT Light.ttf');
-	src: url('../Futura LT Light.otf');
+	src: url('../FuturaLight.ttf');
+	src: url('../FuturaLight.otf');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -1398,7 +1397,7 @@ padding:10px;
    cursor:pointer;
    outline:none;
    position:relative;
-   top:-7px;
+   top:-17px;
    left:791px;
 }
 .page-photographer .description 
@@ -1406,8 +1405,8 @@ padding:10px;
 	color: #898989;
     float: right;
     position: absolute;
-    top: 426px;
-	right:25px;
+    top: 542px;
+	right:38px;
 }
 .page-photographer .file_list {
    padding:8px 0 8px 7px;
@@ -1425,6 +1424,8 @@ padding:10px;
 }
 .page-photographer .fieldset-wrapper {
    float:left;
+   position:relative;
+   z-index:0;
 }
 .page-photographer .content {
 	width:100%;
@@ -1464,9 +1465,24 @@ div.messages {
 	position: relative;
 }
 .content ul.sf-menu li ul li ul {
-	margin: -1px 0 0 10px!important;
+	margin: -1px 0 0 -17px!important;
 	border-left:none;
 	border-radius:0 6px 6px 0;
 	-moz-border-radius:0 6px 6px 0;
 	-webkit-border-radius:0 6px 6px 0;
+}
+.region-header {
+   margin-top:6px;
+}
+.login-btn-mid span {
+   margin-top:1px!important;
+}
+ a#guide{
+  text-decoration:underline!important;
+}
+a#guide:hover{
+  text-decoration:none;
+}
+.page-photographer .with-tabs {
+   display:none;
 }
